# cu_duck_deeplearning

./: .gitignore  requirements.txt  timelog.txt
data/: samples.csv  wheel_cmds.csv
docker/ros1-noetic/: Dockerfile
models/: alvinn_20260416_154338.pt  alvinn_20260416_174123.pt  alvinn_20260416_174434.pt  alvinn_20260416_175152.pt  alvinn_20260416_175907.pt  alvinn_20260416_181738.pt  alvinn_20260418_125607.pt  alvinn_20260418_130138.pt  alvinn_20260418_130951.pt  alvinn_20260418_132313.pt  alvinn_20260418_133629.pt  alvinn_20260418_144125.pt  calvinn_(64x64)_20260418_194549.pt  calvinn_(64x64)_latest.pt  calvinn_20260418_192336.pt  calvinn_latest.pt
ros_packages/dl_ctrl/src/: DL_ctrl.py
ros_packages/game_controller/: CMakeLists.txt  package.xml
ros_packages/game_controller/launch/: game_controller.launch
ros_packages/game_controller/scripts/: controller.py
ros_packages/game_controller/src/: controller.py
rosbags/: README.md
scripts/: bag_extract.py  run_ros1_noetic_docker.sh  train_ALVINN.py  train_main.py  training_pipeline.py
scripts/utils/: ALVINN.py  ALVINNITA.py  CALVINN.py  DuckieDriveDataset.py  MELVINN.py  SIMONN.py  THEODORRE.py  data_player.py  fat_ALVINN.py  fn_utils.py  model_utils.py  plotting.py  training_utils.py  utils.py
