<?xml version="1.0"?>
<package format="2">
  <name>game_controller</name>
  <version>0.0.1</version>
  <description>Gamepad to sensor_msgs/Joy ROS1 bridge.</description>

  <maintainer email="you@example.com">duckiebot</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

  <export/>
</package>
